# SnapImport

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  python-tests.yaml
src/snapimport/: __init__.py  cli.py  config.py  core.py  gui.py  progress.py  rename.py  sd.py
src/snapimport/demo/: IMG_0001.ORF  IMG_0002.ORF  IMG_0003.ORF  IMG_0004.ORF  IMG_0005.ORF  IMG_0006.ORF  IMG_0007.ORF  IMG_0008.ORF  IMG_0009.ORF  IMG_0010.ORF  IMG_0010.XMP  generate_demo_files.py
tests/: conftest.py  test_cli.py  test_cli_integration.py  test_cli_unit.py  test_config.py  test_core_unit.py  test_coverage_final.py  test_final_coverage.py  test_final_integration.py  test_final_push.py  test_import_core.py  test_integration.py  test_integration_coverage.py  test_progress_unit.py  test_push_coverage.py  test_rename.py  test_rename_more.py  test_sd.py
