[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snapimport"
version = "1.0.0"
description = "Seamlessly import & organise photos from SD cards with EXIF-smart renaming, live progress bars, and wizard setup."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["photography", "sd-card", "exif", "photo-import", "cli", "macos"]
authors = [
  { name = "ImBisy" },
]
dependencies = [
  "typer",
  "rich==13.7.1",
  "pydantic-settings",
  "tomlkit",
  "psutil",
  "PyExifTool",
  "platformdirs",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Utilities",
]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov", "pytest-timeout", "piexif", "pillow"]

[tool.pytest.ini_options]
markers = [
  "unit: fast isolated unit tests",
  "cli: Typer CliRunner tests",
  "integration: full journey tests",
]
addopts = "--cov=snapimport --cov-report=term-missing"
timeout = 10
timeout_method = "thread"

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
snapimport = "snapimport.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/snapimport"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
